# angular

./: .bazelrc  WORKSPACE  karma-js.conf.js  package.json
.circleci/: config.yml
aio/: BUILD.bazel  package.json
aio/content/examples/: examples.bzl
aio/content/examples/comparing-observables/src/: observables.ts
aio/content/examples/upgrade-module/: BUILD.bazel
aio/content/examples/upgrade-phonecat-2-hybrid/: BUILD.bazel
aio/scripts/: BUILD.bazel
aio/src/app/: app.component.spec.ts  app.component.ts
aio/src/app/custom-elements/: elements-loader.ts
aio/src/app/documents/: document.service.spec.ts  document.service.ts
aio/src/app/navigation/: navigation.service.ts
aio/src/app/search/: search.service.spec.ts  search.service.ts
aio/src/app/shared/: custom-icon-registry.ts  location.service.ts  scroll-spy.service.ts  scroll.service.ts  toc.service.spec.ts  toc.service.ts  web-worker.ts
aio/src/app/sw-updates/: sw-updates.service.spec.ts  sw-updates.service.ts
aio/src/testing/: doc-viewer-utils.ts  location.service.ts  pretty-printer.service.ts  search.service.ts
aio/tests/deployment/e2e/: BUILD.bazel
aio/tests/deployment/shared/: BUILD.bazel
aio/tools/example-zipper/: BUILD.bazel
aio/tools/examples/: BUILD.bazel  run-example-e2e.mjs
aio/tools/stackblitz-builder/: BUILD.bazel
aio/tools/transforms/angular-content-package/: BUILD.bazel
aio/tools/transforms/remark-package/: BUILD.bazel
docs/: BAZEL.md  TRIAGE_AND_LABELS.md
scripts/ci/: angular-test-init-spec.ts  create-saucelabs-test-bundle.mjs
(+129 files in other folders)
