load("//tools:defaults.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

nodejs_binary(
    name = "generate-example-zip",
    data = [
        "exampleZipper.mjs",
        "//aio/tools/transforms/examples-package:files",
        "//aio/tools/transforms/helpers:files",
        "@npm//archiver",
        "@npm//globby",
        "@npm//canonical-path",
        "@npm//fs-extra",
    ],
    entry_point = "generateZip.mjs",
)
